แก้ไขข้อความหน้า index.html

--- a/Page 4.html
+++ b/Page 4.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="navBar">
           <ul>
-            <il><a href="Page 1.html">Home</a></il>
+            <il><a href="index.html">Home</a></il>
                 <il><a href="Page 2.html">การกำเนิดบิ๊กแบง</a></il>
                 <il><a href="Page 3.html">ข้อมูลทางดาราศาสตร์</a></il>
                 <il><a href="Page 4.html">ข้อมูลเกี่ยวกับเทพ</a></il>
