--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
               <i class="material-symbols-outlined dark">star_rate_half</i>
           </div>
           <ul>
-            <il><a href="Page 1.html">Home</a></il>
+            <il><a href="index.html">Home</a></il>
                 <il><a href="Page 2.html">การกำเนิดบิ๊กแบง</a></il>
                 <il><a href="Page 3.html">ข้อมูลทางดาราศาสตร์</a></il>
                 <il><a href="Page 4.html">ข้อมูลเกี่ยวกับเทพ</a></il>
